=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.2
 - Fixed [ 2774786 ] [G Map Module] GOverviewMapControl Defaults to Empty Display (wooc)
 - Fixed [ 1694445 ] SVN 1593: Individual Report, Text align (wooc)
 - Added [ 2671412 ] Link to Statistics Charts from GEDCOM Statistics Block (wooc)
 - Fixed [ 2734393 ] Review Changes Diff for Appended fails (fisharebest)

Version 4.2.1 2009-04-05
 - Fixed: [ 2730614 ] SVN 5320: Media Upload fails (canajun2eh)
 - Fixed: [ 2595714 ] Truncated first letter of thumb name if non-ASCII character (fisharebest)
 - Added: Cemetery report (canajun2eh)
 - Fixed: [ 2721892 ] Media Viewer ignores "Hide file name" config option (canajun2eh)
 - Fixed: [ 2702565 ] [4.2-4.2.5241] autocomplete not working when accented charac (wooc)
 - Added: Make Autocomplete an option in the GEDCOM config, Edit section (canajun2eh)
 - Fixed: [ 2634211 ] [4.2]+[4.1.6] Individual Add(ed) Facts not stored (fisharebest)
 - Fixed: [ 2604802 ] In the "Find Place" link the "Display all" list doesn't show (wooc)
 - Fixed: [ 2711647 ] Privacy option changes not working (canajun2eh)
 - Fixed: [ 2708857 ] [4.2.1svn5259] Lifespan chart reversed up/down arrows (wooc)
 - Fixed: [ 2333142 ] Relationship error (wooc)
 - Fixed: [ 2702570 ] [4.2-4.2.5241] autocomplete not active in quickupd. fields (wooc)
 - Fixed: [ 2702575 ] [4.2-4.2.5241] place with ( or with ) in googlemaps module (wooc)
 - Added: Extra language file for Shared Notes (windmillway)
 - Fixed: [ 2694015 ] Incorrect handling of Highlighted image (canajun2eh)
 - Changed: Add language editor support for comments on variable definition lines (canajun2eh)
 - Changed: Add language editor support for var. names or text enclosed in apostrophes (canajun2eh)