@@ -10,6 +10,7 @@
 
 
 Version 4.2.2
+ - Fixed [ 2780414 ] Clippings Cart MySQL Error (fisharebest)
  - Fixed [ 2774786 ] [G Map Module] GOverviewMapControl Defaults to Empty Display (wooc)
  - Fixed [ 1694445 ] SVN 1593: Individual Report, Text align (wooc)
  - Added [ 2671412 ] Link to Statistics Charts from GEDCOM Statistics Block (wooc)
